# h2hdb-komga

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: rebuild-env.sh
scripts/hooks/: finalize-python.sh
src/h2hdb_komga/: __main__.py  config_loader.py  komga.py  sync.py  threading_tools.py
