[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2hdb-komga"
version = "0.2.0"
description = ""
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
dependencies = ["h2hdb>=0.11.0.5,<2.0.0.0", "requests>=2.34.2,<3.0.0"]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["black>=26.5.1", "ruff>=0.15.21", "mypy>=2.2.0", "pymarkdownlnt>=0.9.38"]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/h2hdb-komga"
Source = "https://github.com/Kuan-Lun/h2hdb-komga"
Tracker = "https://github.com/Kuan-Lun/h2hdb-komga/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/h2hdb_komga"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E203/E226 conflict with Black's formatting choices; E501 is redundant with
# Black's line-length enforcement.
extend-ignore = ["E203", "E226", "E501"]

[dependency-groups]
dev = ["pytest>=9.1.1"]
